EN-55: add technology field in profile